--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: Long Haul
 description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
-url: http://brianmaierjr.github.com/long-haul
+url: http://hfid.olin.edu/sa2017/badlands/jekyll
 baseurl: ""
 paginate_path: "blog/page:num/"
-permalink: blog/:title/
+# permalink: blog/:title/
 
 markdown: kramdown
 highlighter: rouge
