testing another template

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
 url: http://hfid.olin.edu/sa2017/badlands/jekyll
 baseurl: ""
-paginate_path: "blog/page:num/"
-# permalink: blog/:title/
+# paginate_path: "blog/page:num/"
+permalink: blog/:title/
 
 markdown: kramdown
 highlighter: rouge
@@ -25,4 +25,4 @@ social:
    facebook: brianmaierjr
    email: brimaidesigns@gmail.com
 
-google_analytics: "UA-58263416-1"
+# google_analytics: "UA-58263416-1"
