--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
 url: http://hfid.olin.edu/sa2017/badlands/jekyll
 baseurl: ""
-# paginate_path: "blog/page:num/"
+paginate_path: "blog/page:num/"
 permalink: blog/:title/
 
 markdown: kramdown
