--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Long Haul
 description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
 url: http://hfid.olin.edu/sa2017/badlands/jekyll
-baseurl: "sa2017/badlands/jekyll"
+baseurl: ""
 # paginate_path: "blog/page:num/"
 permalink: blog/:title/
 
