Fixed more links

--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ navigation:
  - title: Home
    url: /index.html
  - title: About
-   url: /about
+   url: /about.html
  - title: Contact
-   url: /contact
+   url: /contact.html
 
 social:
    github: brianmaierjr
