Testing jekyll baseurl fix

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: "Streamlining the US Visa application process through interface des
 about: "Streamlining the US Visa application process through interface design."
 location: "Olin College of Engineering"
 url: http://hfid.olin.edu/
-baseurl: "http://hfid.olin.edu/sa2017/badlands/jekyll"
+baseurl: "http://hfid.olin.edu/sa2017/badlands"
 
 # google analytics tracking code, please change the value
 g_analytics: ""
@@ -38,13 +38,9 @@ kramdown:
 # third party gems
 gems:
   - jekyll-paginate
-  # - jekyll-gist
-  # - jemoji
 
 whitelist:
   - jekyll-paginate
-  # - jekyll-gist
-  # - jemoji
   
 # exclude files
 exclude:
